# pygame_orion

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
attic/: async_events.py  time_step.py
docs/source/: conf.py  core.rst  data.rst  ecs.rst  index.rst  input.rst  intro.rst  renderer.rst  scenes.rst
pygame_orion/: __init__.py  __main__.py  _constants.py  _logging.py  _prepare.py  events.py  plugins.py
pygame_orion/core/: __init__.py  config.py  display.py  events.py  game.py  time_step.py
pygame_orion/core/events/: __init__.py  emitter.py
pygame_orion/ecs/: __init__.py  base_system.py  ecs_manager.py
pygame_orion/input/: __init__.py  input_manager.py
pygame_orion/renderer/: __init__.py  base_render_system.py  renderer.py
pygame_orion/renderer/events/: __init__.py
pygame_orion/scenes/: camera.py  events.py  scene.py  scene_manager.py
tests/: dev.py  unit.py
